# Solar3DEngine

./: .clang-format  CMakeLists.txt
libs/SDL3/: .git-hash  REVISION.txt
libs/SDL3/include/SDL3/: SDL_revision.h
libs/SDL3/include/build_config/: SDL_revision.h.cmake
libs/assimp/test/models/IFC/: AC14-FZK-Haus.ifc
libs/assimp/test/models/RAW/: Wuson.raw
models/coraline/: coraline.mtl
shaders/: PBR.glsl  defaultFrag.glsl  defaultVert.glsl  phong.glsl  skyboxVert.glsl
shaders/Default/: Frag.glsl  PBR.glsl  Phong.glsl  Vert.glsl
shaders/Default/Uniforms/: MaterialUni.glsl  Uni.glsl
shaders/Default/Utils/: Functions.glsl
src/: camera.cpp  camera.h  main.cpp  skybox.cpp  skybox.h  utils.h
src/CacheManager/: cacheManager.h  textureManager.cpp
src/File/: utils.cpp  utils.h
src/Input/: inputManager.cpp  inputManager.h
src/Math/: mathUtils.cpp  mathUtils.h
src/Model/: importer.cpp  importer.h  material.cpp  material.h  model.cpp  model.h
src/Object/: material.cpp  material.h  mesh3D.cpp  mesh3D.h  object3D.cpp  object3D.h  skinnedObject3D.cpp
src/Object/Animation/: animator.cpp  animator.h
src/Object/Material/: material.cpp  material.h
src/Object/ObjectImporter/: objectLoader3D.cpp  objectLoader3D.h  objectLoader3DMat.cpp
src/Render/: GL_render.cpp  GL_render.h  UBO.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
